--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body {
     height: 100vh;
+    display:flex;
+    justify-content: center;
+    background-color: #1F2833;
+}
+
+.container {
+    height: 700px;
+    width: 700px;
 }
