--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     height: 100vh;
     display:flex;
     justify-content: center;
-    background-color: #1F2833;
+    background-color: #F3E3CC;
 }
 
 .container {
